# WickedEngine-Bindings

./: CMakeLists.txt
.github/workflows/: cmake.yml
Source/: Engine.cpp  Engine.h  Engine.rc  main_SDL2.cpp  stdafx.h
Source/Building/: Build.py  Build.sh
Source/Distribution/: wicked-engine-demo.desktop  wicked-engine-demo.sh
Source/Examples/: Example.py
Source/Scripts/Initialisation/: startup.lua
